build-logic/routebinding/routebinding-compiler-plugin/src/test/data/diagnostic/UnsupportedReceiverType.kt
import androidx.compose.runtime.Composable
import io.github.reactivecircus.routebinding.runtime.RouteBinding

@RouteBinding(DummyRoute::class)
@Composable
internal fun <!UNSUPPORTED_RECEIVER_TYPE!>String<!>.UnsupportedReceiverScreen() {
}
